# agentic_cli

./: ENTRY.md  README.md  pyproject.toml  setup.sh
agentic/: cli.py  mcp_server.py  monitor.py  tmux_manager.py
demos/: snake.html
