[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-tmux"
version = "0.1.0"
description = "Multi-agent orchestration for CLI coding assistants via tmux panes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Agentic CLI Team" }
]
keywords = ["ai", "agents", "tmux", "cli", "orchestration", "copilot", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "redis>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "libtmux>=0.28.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
agentic-tmux = "agentic.cli:main"
agentic-worker-mcp = "agentic.worker_mcp:main"

[project.urls]
Homepage = "https://github.com/negaga53/agentic-tmux"
Documentation = "https://github.com/negaga53/agentic-tmux#readme"
Repository = "https://github.com/negaga53/agentic-tmux"

[tool.hatch.build.targets.wheel]
packages = ["agentic"]

[tool.hatch.build.targets.wheel.force-include]
"agentic/data" = "agentic/data"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
